Changes to week2.

--- a/week2/theory.ipynb
+++ b/week2/theory.ipynb
@@ -26,6 +26,15 @@
     "\n",
     "-   The company wants to target different groups of costumers depending on 'AGE', 'INCOME' and 'MONEY SPENT AT COMPANY'. Supervised or Unsupervised?   \n",
     "\n",
+    "<b>Solution</b>:<br>\n",
+    "- (1) Supervised Learning; *Learn to classif unknown data based on known training data.*\n",
+    "- (2) Unsupervised Learning; *Partition data into similar groups.*\n",
+    "- (3) Supervised Learning; *Learn to classif unknown data based on known training data.*\n",
+    "- (4) Unsupervised Learning; *Partition data into similar groups.*\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "<br><br>\n",
     "<b>Question 2</b>:<br>\n",
     "In supervised learning the data is of the form $D_{supervised}=\\{(x_1,y_1),...,(x_n,y_n)\\}$. <br>\n",
@@ -37,7 +46,17 @@
     "\n",
     "$$D=\\{20\\text{ years},\\;21\\text{ years}, \\;23\\text{ years}, ... \\}$$ \n",
     "$$D=\\{([100\\text{ kr},\\;22\\text{ years}],\\text{ male}),\\;([120\\text{ kr},\\;30\\text{ years}],\\text{ female}), ...\\}$$\n",
-    " \n"
+    "\n",
+    "\n",
+    "<b>Solution</b>:<br>\n",
+    "(1) Supervised Learning; \n",
+    "    $$D_{\\textit{supervised}} = \\{ [(\\text{18 years}, \\text{male}, \\text{20.000 \\$}, \\text{Aarhus}], \\text{10 \\$ spent at the company}), \\ldots, ([\\text{22 years}, \\text{female}, \\text{25.000 \\$}, \\text{Silkeborg}], \\text{15 \\$ spent at the company}) \\}$$\n",
+    "(2) Unsupervised Learning; \n",
+    "    $$ D_{unsupervised} = \\{ 18 \\text{ years}, 20 \\text{ years}, 44 \\text{ years}, \\ldots, 55 \\text{ years} \\} $$\n",
+    "(3) Supervised Learning; \n",
+    "    $$ D=\\{([100\\text{ kr},\\;22\\text{ years}],\\text{ male}),\\;([120\\text{ kr},\\;30\\text{ years}],\\text{ female}), ...\\} $$\n",
+    "(4) Unsupervised Learning; \n",
+    "    $$ D_{unsupervised} = \\{ (\\text{24 years}, \\text{ 15.000 \\$}, \\text{ 250 \\$}), \\ldots, (\\text{27 years}, \\text{ 18.000 \\$}, \\text{ 350 \\$}) \\} $$"
    ]
   },
   {
@@ -45,6 +64,15 @@
    "metadata": {},
    "source": [
     "# 2. Regression Or Classification\n",
+    "**Classification:** Classification predictive modeling is the task of approximating a mapping function (f) from input variables (X) to discrete output variables (y).\n",
+    "\n",
+    "The output variables are often called labels or categories. The mapping function predicts the class or category for a given observation.\n",
+    "\n",
+    "**Regression:** Regression predictive modeling is the task of approximating a mapping function (f) from input variables (X) to a continuous output variable (y).\n",
+    "\n",
+    "A continuous output variable is a real-value, such as an integer or floating point value. These are often quantities, such as amounts and sizes.\n",
+    "\n",
+    "<br></br>\n",
     "\n",
     "<b>Question 1</b>: <br>In each of the following examples you should distinguish between regression and classification.\n",
     "\n",
@@ -55,6 +83,14 @@
     "-   Predicting a students grade in machine learning as a function of previous grades (on the 12 scale). Is that regression or classification? \n",
     "    \n",
     "-   Predicting email as spam, normal. Regression or classification?\n",
+    "\n",
+    "    \n",
+    "<b>Solution</b>:\n",
+    "- This is **regression**, since we are predicting a real-value.\n",
+    "- This is **classification**, since we are predicting a label or a category.\n",
+    "- This is **classification**, since we are predicting a label or a category.\n",
+    "- This is **classification**, since we are predicting a label or a category.\n",
+    "\n",
     "<br><br>\n",
     "    \n",
     "<b>Question 2: </b> <br>\n",
@@ -62,6 +98,12 @@
     "\n",
     "What is $Y$ in the above four cases? \n",
     "\n",
+    "<b>Solution</b>:\n",
+    "- For this case it is a real-value, the amount of money the customer spent at the company. $$ Y = \\mathbb{R}^+ $$\n",
+    "- For this case it is a label, $$ Y = \\{RED, WHITE, ROSE\\} $$\n",
+    "- For this case it is a label, the students grade in machine learning. \n",
+    "    $$ Y = \\{-03, 00, 02, 04, 07, 10, 12\\} $$\n",
+    "- For this case it is a label, $$ Y = \\{normal, spam\\} $$\n",
     "\n"
    ]
   },
@@ -72,7 +114,154 @@
     "# 3. The Perceptron\n",
     "### Question 1: Running the Perceptron Learning Algorithm\n",
     "Assume we are given a training data set with 3 features, of which the first is hardcoded to 1. The data consists of the four examples $((1,2,2), 1), ((1, 2, 3), 1), ((1, 4, 2), -1), ((1, 4, 0), -1)$. What hypothesis $w = (w_0,w_1,w_2)$ does it return when initialized with $w = (0,0,0)$ and where we always pick the first misclassified point when updating? NOTE: We assume $sign(0)=0$ and thus is different from all labels.\n",
-    "\n"
+    "\n",
+    "**First iteration:**\n",
+    " - $w = (0, 0, 0)$\n",
+    " - Datapoint: $((1, 2, 2), 1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        0 & 0 & 0\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 2 \\\\ 2 \n",
+    "    \\end{bmatrix}\n",
+    "    = 0\n",
+    "$$\n",
+    "Since $y \\neq sign(W^T x)$ we have $w = w + yx \\implies w = (1, 2, 2)$. \n",
+    "\n",
+    "**Second iteration:** \n",
+    " - $w = (1, 2, 2)$\n",
+    " - Datapoint: $((1, 2, 3), 1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 2 & 2\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 2 \\\\ 3 \n",
+    "    \\end{bmatrix}\n",
+    "    = 11\n",
+    "$$\n",
+    "Since $y = sign(W^T x)$ we still have $w = w + yx \\implies w = (1, 2, 2)$. \n",
+    "\n",
+    "**Third iteration:** \n",
+    " - $w = (1, 2, 2)$\n",
+    " - Datapoint: $((1, 4, 2), -1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 2 & 2\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 4 \\\\ 2 \n",
+    "    \\end{bmatrix}\n",
+    "    = 13\n",
+    "$$\n",
+    "Since $y \\neq sign(W^T x)$ we have $w = w + yx \\implies w = (0, -2, 0)$. \n",
+    "\n",
+    "**Fourth iteration:**\n",
+    " - $w = (0, -2, 0)$\n",
+    " - Datapoint: $((1, 2, 2), 1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        0 & -2 & 0\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 2 \\\\ 2 \n",
+    "    \\end{bmatrix}\n",
+    "    = -4\n",
+    "$$\n",
+    "Since $y \\neq sign(W^T x)$ we have $w = w + yx \\implies w = (1, 0, 2)$. \n",
+    "\n",
+    "**Fifth iteration:**\n",
+    " - $w = (1, 0, 2)$\n",
+    " - Datapoint: $((1, 2, 3), 1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 0 & 2\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 2 \\\\ 3 \n",
+    "    \\end{bmatrix}\n",
+    "    = 7\n",
+    "$$\n",
+    "Since $y = sign(W^T x)$ we still have $w = w + yx \\implies w = (1, 0, 2)$. \n",
+    "\n",
+    "**Sixth iteration:**\n",
+    " - $w = (1, 0, 2)$\n",
+    " - Datapoint: $((1, 4, 2), -1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 0 & 2\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 4 \\\\ 2 \n",
+    "    \\end{bmatrix}\n",
+    "    = 5\n",
+    "$$\n",
+    "Since $y = sign(W^T x)$ we have $w = w + yx \\implies w = (0, -4, 0)$. \n",
+    "\n",
+    "**Seventh iteration:**\n",
+    " - $w = (0, -4, 0)$\n",
+    " - Datapoint: $((1, 4, 2), -1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        0 & -4 & 0\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 4 \\\\ 2 \n",
+    "    \\end{bmatrix}\n",
+    "    = -16\n",
+    "$$\n",
+    "Since $y = sign(W^T x)$ we still have $w = w + yx \\implies w = (0, -4, 0)$. \n",
+    "\n",
+    "**Eigth iteration:**\n",
+    " - $w = (0, -4, 0)$\n",
+    " - Datapoint: $((1, 4, 0), -1)$\n",
+    " - with $y \\neq sign(w^T x)$\n",
+    "\n",
+    "$$  \n",
+    "    w^T x = \n",
+    "    \\begin{bmatrix}\n",
+    "        0 & -4 & 0\n",
+    "    \\end{bmatrix} \n",
+    "    \\times\n",
+    "    \\begin{bmatrix}\n",
+    "        1 \\\\ 4 \\\\ 0 \n",
+    "    \\end{bmatrix}\n",
+    "    = -16\n",
+    "$$\n",
+    "Since $y = sign(W^T x)$ we still have $w = w + yx \\implies w = (0, -4, 0)$. \n",
+    "\n",
+    "$$\n",
+    "    \\text{Final } w = (0, -4, 0).\n",
+    "$$"
    ]
   },
   {
@@ -153,9 +342,26 @@
     "  \n",
     "We consider the split $x < 19$. \n",
     "\n",
-    "**Task:** \n",
-    "  - Compute the entropy of the left and right leaf using this split.\n",
-    "  - Compute the entropy of the full tree using this split."
+    "## Task: \n",
+    "\n",
+    "### Compute the entropy of the left and right leaf using this split.\n",
+    "We have the following leafs: \n",
+    "$$ \\text{First leaf: } 9, 3, 6, 18, 14, 16 $$\n",
+    "$$ \\text{Second leaf: } 33, 20, 27 $$\n",
+    "\n",
+    "$$\n",
+    "    H(\\text{first leaf}) = - \\sum_{i=0}^{2} p_i \\lg_2 (p_i) = - \\left( \\frac{1}{6} \\cdot \\lg_2 \\left(\\frac{1}{6}\\right) \\right) \n",
+    "                                                      + \\left( \\frac{3}{6} \\cdot \\lg_2 \\left(\\frac{3}{6}\\right) \\right)\n",
+    "                                                      + \\left( \\frac{2}{6} \\cdot \\lg_2 \\left(\\frac{2}{6}\\right) \\right) = 1.459\\\\\\\\\n",
+    "    H(\\text{second leaf}) = - \\sum_{i=0}^{2} p_i \\lg_2 (p_i) = - \\left( \\frac{3}{3} \\cdot \\lg_2 \\left(\\frac{3}{3}\\right) \\right) \n",
+    "                                                      + \\left( \\frac{0}{3} \\cdot \\lg_2 \\left(\\frac{0}{3}\\right) \\right)\n",
+    "                                                      + \\left( \\frac{0}{0} \\cdot \\lg_2 \\left(\\frac{0}{6}\\right) \\right) = 0\n",
+    "$$\n",
+    "\n",
+    "### Compute the entropy of the full tree using this split.\n",
+    "$$\n",
+    "    H(\\text{tree}) = \\frac{6}{9} \\cdot 1.46 + \\frac{3}{9} \\cdot 0 = 0.97\n",
+    "$$"
    ]
   },
   {
