--- a/week3/theory.ipynb
+++ b/week3/theory.ipynb
@@ -49,6 +49,10 @@
     "\n",
     "<b>Question 1</b>: What is the worst possible $E_{in}(h)$ over any data set $S$ of $5$ samples of the form $(x,f(x))$ where $x \\in X$?\n",
     "\n",
+    "<b>Solution</b>: Here samples are in form of $x_1, x_2, \\ldots$. \n",
+    "\n",
+    "\n",
+    "\n",
     "<b>Question 2</b>: What is the best possible $E_{in}(h)$ over any data set $S$ of $5$ samples of the form $(x,f(x))$ where $x \\in X$?\n",
     "\n",
     "<b>Question 3</b>: Consider an unknown distribution $D$, such that $D(x_1)=D(x_2)=D(x_3)=1/6$ and $D(x_4)=1/2$ (here $D(x_i)$ denotes the probability of seeing the sample $x_i$). What is $E_{out}(h)$ under this distribution? What is the worst possible $E_{in}(h)$ we could get if we sample $5$ elements from $D$? What is the best $E_{in}(h)$?\n",
@@ -219,7 +223,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +237,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
