--- a/week3/theory.ipynb
+++ b/week3/theory.ipynb
@@ -28,13 +28,13 @@
     "<b>b</b> After learning you will provide her with a $g$, and with high probability the $g$ which you produce will approximate $f$ well out of sample.\n",
     "\n",
     "<b>c</b> One of two things will happen.\n",
-    "<b>(i)</b> You will produce a hypothesis $g$;\n",
-    "<b>(ii)</b> You will declare that you failed.\n",
+    "- <b>(i)</b> You will produce a hypothesis $g$;\n",
+    "- <b>(ii)</b> You will declare that you failed.\n",
+    "\n",
     "If you do return a hypothesis $g$, then with high probability the $g$ which you produce will approximate $f$ well out of sample.\n",
     "\n",
     "\n",
-    "\n",
-    "\n"
+    "<br>Solution:<br/> The solution is answer c. "
    ]
   },
   {
@@ -49,13 +49,15 @@
     "\n",
     "<b>Question 1</b>: What is the worst possible $E_{in}(h)$ over any data set $S$ of $5$ samples of the form $(x,f(x))$ where $x \\in X$?\n",
     "\n",
-    "<b>Solution</b>: Here samples are in form of $x_1, x_2, \\ldots$. \n",
+    "<b>Solution</b>: Here samples are in form of $x_1, x_2, \\ldots$. Input domain: $x_1, x_2. .. $\n",
     "\n",
     "\n",
     "\n",
     "<b>Question 2</b>: What is the best possible $E_{in}(h)$ over any data set $S$ of $5$ samples of the form $(x,f(x))$ where $x \\in X$?\n",
     "\n",
     "<b>Question 3</b>: Consider an unknown distribution $D$, such that $D(x_1)=D(x_2)=D(x_3)=1/6$ and $D(x_4)=1/2$ (here $D(x_i)$ denotes the probability of seeing the sample $x_i$). What is $E_{out}(h)$ under this distribution? What is the worst possible $E_{in}(h)$ we could get if we sample $5$ elements from $D$? What is the best $E_{in}(h)$?\n",
+    "\n",
+    "**Solution:** Sandsynligheden for at vi tager fejl, 1/2. \n",
     "\n",
     "<b>Question 4</b>: Give an example of a distribution $D$ over $X$ such that $E_{out}(h)=1$.\n",
     "\n",
@@ -79,15 +81,40 @@
     "<b>Question 1: </b> \n",
     "Does the Hoeffding bound give any meaningful bounds on $E_{in}$ and $E_{out}$ for the perceptron learning model?  \n",
     "\n",
+    "**Solution:** Nej, Perceptron har et uendelig sample-space, så hvis vi sætter M = uendelig .. \n",
+    "\n",
     "<b>Question 2: </b> \n",
     "Assume you use a hypothesis set $H$ with $|H|=M=10^6$. How many samples $n$ do you need to guarantee that $|E_{in} - E_{out}| < 0.1$ with probability at least $0.95$? \n",
+    "\n",
+    "<b>Solution: </b>\n",
+    "Use slide 14 from UnionBound.pdf. \n",
+    "\n",
+    "$$\n",
+    "    \\text{We have } \\epsilon = 0.1 \\text{ and } M = 10^6\\\\\\\\\n",
+    "    2 \\cdot 10^6 \\cdot e^{-2 \\cdot 0.1^2 \\cdot n} < 0.05\\\\\\\\\n",
+    "    \\Pr[|E_{in}-E_{out}| > \\varepsilon] \\text{ er sandsynligheden for at vi fejler.}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "<b>Question 3: </b> \n",
     "Assume you use a hypothesis set $H$ with $|H|=M=10^6$ and you have $n=10^4$ samples. How small can you guarantee that $|E_{in} - E_{out}|$ is with probability at least $0.95$? \n",
     "\n",
+    "**Solution** Find episilon\n",
+    "\n",
+    "\n",
     "<b>Question 4: </b> \n",
     "Assume you have $n=10^4$ samples and would like to guarantee that $|E_{in} - E_{out}|<0.2$ with probability at least $0.95$. How large a hypothesis set can you use?\n",
     "\n",
+    "**Solution** Find M\n",
     "\n",
     "\n",
     "\n"
