--- a/week6/theory.ipynb
+++ b/week6/theory.ipynb
@@ -21,8 +21,25 @@
     "* Make a network that computes $x^2$ - for any integer x in the set {2,3,4,5} <b>(Might be hard so skip if waste too much time)</b>\n",
     "\n",
     "\n",
+    "Her løber i sådan 1, 2, 3 ... .. hvor den tjekker om i = x, hvis ja, så output i \n",
+    "$$ \\sum_i 2 i^2 \\max(0, \\; \\frac{1}{2} - \\max(0, x - i) - \\max(0, i - x)) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
     "- **Hint 1: It may be easier to find an easy mathematical expression that solves the problem and then to make a network that implements that**\n",
     "- **Hint 2: It suffices to use just relu and identity activations**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Det vi får ud af det her er at vi laver et neuralt netværk.. hvor vi kun kan tweake på vægtene.. det er disse tweaks vi laver når vi træner vores netværk. "
    ]
   },
   {
@@ -46,7 +63,7 @@
     "We organize the weighs in matrices $(W_1, W_2)$ and vectors $(b_1,b_2)$ as follows (consistent with slides):\n",
     "* The $i'th$ column of $W_1$ are the weights we multiply with the input data to get the input to hidden node $i$. The shape of the $W_1$ matrix is $d \\times h$.\n",
     "* The bias $b_1$ is a vector of size h, the i'th entry is the bias to hidden neuron $i$.\n",
-    "* The $i'th$ column of $W_2$ are the weights we multiply with the hidden layer activations to get the input to the i'th output node. $W_2$ is a $h \\times \\textrm{output_size}$ matrix ($h \\times 1$ matrix in our case)\n",
+    "* The $i'th$ column of $W_2$ are the weights we multiply with the hidden layer activations to get the input to the i'th output node. $W_2$ is a $h \\times \\textrm{output\\_size}$ matrix $(h \\times 1$ matrix in our case)\n",
     "* The bias $b_2$ is a vector of size output_size \n",
     "\n",
     "**Task:** In the cell below (partially) complete the neural net class\n",
@@ -59,10 +76,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Solution\n",
+    "We have the following: \n",
+    "\\begin{align*}\n",
+    "    \\phi^2 (\\phi^1 (xW^1 + b^1) W^2 + b^2 )\n",
+    "\\end{align*}\n",
+    "\n",
+    "Where $\\phi^1 (xW^1 + b^1)$ is our hidden layer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data size: 20640 num features: 8\n",
+      "Neural net initialized with random values\n",
+      "hidden layer size: 7\n",
+      "mean house price least squares error: 0.32253261478095707\n",
+      "5 house prediction:\n",
+      "estimated price , true price\n",
+      "[[3.87439488 4.526     ]\n",
+      " [3.98254363 3.585     ]\n",
+      " [3.81248215 3.521     ]\n",
+      " [3.1932362  3.413     ]\n",
+      " [2.89667929 3.422     ]]\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -92,6 +140,10 @@
     "        pred = None # the output of neural net n x 1\n",
     "    \n",
     "        ### YOUR CODE HERE\n",
+    "        hidden = np.dot(X, self.W1) + self.b1\n",
+    "        tmp = np.maximum(hidden, 0)     # This is the ReLU activation function\n",
+    "        z2 = np.dot(tmp, self.W2) + self.b2\n",
+    "        pred = z2\n",
     "        ### END CODE\n",
     "        return pred\n",
     "    \n",
@@ -105,6 +157,7 @@
     "        \"\"\"\n",
     "        score = None\n",
     "        ### YOUR CODE HERE\n",
+    "        score = np.mean((self.predict(X) - y)**2)\n",
     "        ### END CODE\n",
     "        return score\n",
     "        \n",
@@ -146,11 +199,11 @@
     "    lsq = house_net.score(X_scaled, yr.reshape(-1, 1))\n",
     "    pred = house_net.predict(X_scaled)\n",
     "    print('mean house price least squares error:', lsq)\n",
-    "    #print('5 house prediction:\\nestimated price , true price')\n",
-    "    #print(np.c_[house_net.predict(X_scaled[0:5, :]), yr[0:5]])\n",
+    "    print('5 house prediction:\\nestimated price , true price')\n",
+    "    print(np.c_[house_net.predict(X_scaled[0:5, :]), yr[0:5]])\n",
     "\n",
-    "simple_test()\n",
-    "#housing_test()"
+    "#simple_test()\n",
+    "housing_test()"
    ]
   },
   {
@@ -181,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient of f(z)=1/(1 + e^{-z}) at z = 0 tensor([0.2500])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "z = torch.zeros(1, requires_grad=True)\n",
@@ -228,9 +289,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 0: Cost 17.3\n",
+      "epoch 1: Cost 15.190625000000002\n",
+      "epoch 2: Cost 13.692634062500005\n",
+      "epoch 3: Cost 12.356926041406258\n",
+      "epoch 4: Cost 11.152098704369147\n",
+      "epoch 5: Cost 10.064767998773155\n",
+      "epoch 6: Cost 9.08345307561597\n",
+      "epoch 7: Cost 8.197816399012343\n",
+      "epoch 8: Cost 7.398529300039398\n",
+      "epoch 9: Cost 6.6771726932827855\n",
+      "epoch 10: Cost 6.026148355687603\n",
+      "epoch 11: Cost 5.438598891008057\n",
+      "epoch 12: Cost 4.908335499134771\n",
+      "epoch 13: Cost 4.4297727879691315\n",
+      "epoch 14: Cost 3.997869941142141\n",
+      "epoch 15: Cost 3.6080776218807813\n",
+      "epoch 16: Cost 3.2562900537474047\n",
+      "epoch 17: Cost 2.9388017735070338\n",
+      "epoch 18: Cost 2.652268600590097\n",
+      "epoch 19: Cost 2.393672412032563\n",
+      "epoch 20: Cost 2.160289351859388\n",
+      "epoch 21: Cost 1.9496611400530979\n",
+      "epoch 22: Cost 1.7595691788979206\n",
+      "epoch 23: Cost 1.5880111839553732\n",
+      "epoch 24: Cost 1.4331800935197248\n",
+      "epoch 25: Cost 1.2934450344015513\n",
+      "epoch 26: Cost 1.1673341435474003\n",
+      "epoch 27: Cost 1.0535190645515287\n",
+      "epoch 28: Cost 0.9508009557577548\n",
+      "epoch 29: Cost 0.8580978625713733\n",
+      "epoch 30: Cost 0.7744333209706643\n",
+      "epoch 31: Cost 0.6989260721760246\n",
+      "epoch 32: Cost 0.6307807801388621\n",
+      "epoch 33: Cost 0.5692796540753231\n",
+      "epoch 34: Cost 0.5137748878029791\n",
+      "epoch 35: Cost 0.4636818362421886\n",
+      "epoch 36: Cost 0.4184728572085752\n",
+      "epoch 37: Cost 0.3776717536307391\n",
+      "epoch 38: Cost 0.340848757651742\n",
+      "epoch 39: Cost 0.30761600378069714\n",
+      "epoch 40: Cost 0.2776234434120792\n",
+      "epoch 41: Cost 0.25055515767940134\n",
+      "best w found tensor([5.7553, 0.2500], dtype=torch.float64)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "import torch # the torch tensor library\n",
@@ -265,6 +376,7 @@
     "        w.requires_grad_() # say i want gradient relative to w in upcoming computation\n",
     "        cost = None\n",
     "        ### YOUR CODE HERE - Compute Ein for linear regression as function of w and store in cost 1 - 4 lines\n",
+    "        cost = ni * torch.sum((torch.matmul(X, w) - ty)**2)\n",
     "        ### END CODE\n",
     "        cost_hist.append(cost)\n",
     "        print('epoch {0}: Cost {1}'.format(i, cost))\n",
@@ -312,6 +424,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from platform import release\n",
+    "\n",
     "print('Do the python forward and backward pass here')\n",
     "x1 = 3.0\n",
     "x2 = 1.0 \n",
@@ -320,6 +434,24 @@
     "w2 = 2.0\n",
     "w3 = 1.0\n",
     "### YOUR CODE HERE\n",
+    "\n",
+    "# forward pass\n",
+    "a = w1 * x1         # z1\n",
+    "b = w2 * x2         # z2\n",
+    "c = a + b           # hin\n",
+    "d = np.maximum(c, 0) # hout\n",
+    "e = w3 * d          # pred\n",
+    "f = y - e          # diff\n",
+    "g = f**2           # error\n",
+    "\n",
+    "# backward pass\n",
+    "dg_dg = 1\n",
+    "# dg_dg * dg_df\n",
+    "dg_df = dg_dg * 2 * f\n",
+    "\n",
+    "# drelu_dx = x > 0            # true = 1, false = 0 i python\n",
+    "\n",
+    "\n",
     "### END CODE\n",
     "\n"
    ]
@@ -650,7 +782,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -664,7 +796,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
