--- a/week8/theory.ipynb
+++ b/week8/theory.ipynb
@@ -19,10 +19,20 @@
     "### VC-dimension of base classifier\n",
     "1. Show that the VC-dimension of $H$ is $2$.\n",
     "\n",
+    "**Solution**\n",
+    "\n",
+    "Step 1: show dataset of size 2 than we can shatter\n",
+    "\n",
+    "Step 2: no dataset of size 3 can shatter\n",
+    "\n",
+    "\n",
+    "Hvis vi har $k = 2$ datapunkter, så kan vi godt lave alle dichotomies. Hvis $k = 3$ og alle punkterne er på en linje, så kan vi ikke lave alle dichotomies. Idet $dimension = k - 1$, så er $dimension = 2$. \n",
+    "\n",
+    "\n",
     "### VC-dimension of voting classifiers\n",
     "Let $C$ be the class of all voting classifiers over $H$, i.e. $C$ consists of all hypotheses of the form:\n",
     "$$\n",
-    "f(x) = \\textrm{sign}(\\sum_{h \\in H} \\alpha_h h(x))\n",
+    "f(x) = \\textrm{sign}\\left(\\sum_{h \\in H} \\alpha_h h(x)\\right)\n",
     "$$\n",
     "We will show that $C$ has infinite VC-dimension. To do so, we will argue that for any size $n$, there is a set of $n$ points $x_1,\\dots,x_n$ in 1d that can be shattered, i.e. for any labeling $y \\in \\{-1,1\\}^n$ of the $n$ points, there is a hypothesis $g$ in $C$ such that $g(x_i)=y_i$ for all $i$. \n",
     "\n",
@@ -135,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +159,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
