--- a/week9/theory.ipynb
+++ b/week9/theory.ipynb
@@ -294,6 +294,8 @@
     "            a: float - data weight\n",
     "        \"\"\"\n",
     "        ### YOUR CODE HERE\n",
+    "        self.alpha.append(a)\n",
+    "        self.dat.append(x)\n",
     "        ### END CODE\n",
     "\n",
     "    def dot(self, z):\n",
@@ -303,6 +305,8 @@
     "            z: np.array\n",
     "        \"\"\"\n",
     "        ### YOUR CODE HERE\n",
+    "        out = 0\n",
+    "    \n",
     "        ### END CODE\n",
     "        return out\n",
     "    \n",
