--- a/week10/practical.ipynb
+++ b/week10/practical.ipynb
@@ -493,7 +493,7 @@
    "outputs": [],
    "source": [
     "def validate_hmm(model):\n",
-    "    pass"
+    "    pass\n"
    ]
   },
   {
@@ -1336,7 +1336,7 @@
    "source": [
     "**Your answer here:**\n",
     "\n",
-    "For the 7-state model, `backtrack` and `backtrack_log` start to disagree on a most likely path and its probability for **i = ?** ."
+    "For the 7-state model, `backtrack` and `backtrack_log` start to disagree on a most likely path and its probability for **i = $\\textcolor{red}{\\text{should be 600}}$** ."
    ]
   },
   {
