--- a/week10/theory.ipynb
+++ b/week10/theory.ipynb
@@ -19,19 +19,46 @@
     "\n",
     "***Exercise 1***: For the following four graphs, write down the joint probabilty of the random variables.\n",
     "\n",
-    "![Graphical models](graphical-models.png)\n",
-    "\n",
+    "![Graphical models](graphical-models.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Solution***     \n",
+    "    \n",
+    "(1) : $P(X)P(Y)P(Z \\: | \\: X, Y)$     \n",
+    "     \n",
+    "(2) : $P(X)P(Y \\: | \\: X)P(Z \\: | \\: X, Y)$       \n",
+    "     \n",
+    "(3) : $P(X)P(Y \\: | \\: X)P(Z \\: | \\: X)P(W \\: | \\: Y, Z)$      \n",
+    "     \n",
+    "(4) : $P(Z_1)P(X_1 \\: | \\: Z_1)P(Z_2 \\: | \\: Z_1)P(X_2 \\: | \\: Z_2)P(Z_3 \\: | \\: Z_2)P(X_3 \\: | \\: Z_3)P(Z_4 \\: | \\: Z_3)P(X_4 \\: | \\: Z_4)P(Z_5 \\: | \\: Z_4)P(X_5 \\: | \\: Z_5)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### From joint probability to graph\n",
     "\n",
     "***Exercise 2***: Draw the following four joint probabilities as dependency graphs:\n",
     "\n",
-    "$p(X)p(Y)p(Z)$\n",
+    "$p(X)p(Y)p(Z)$  \n",
+    "![](task1.png)  \n",
+    "\n",
+    "\n",
     "\n",
     "$p(X)p(Y\\,|\\,X)p(Z\\,|\\,X)$\n",
+    "![](task2.png)   \n",
+    "\n",
+    "\n",
     "\n",
     "$p(X)p(Y\\,|\\,X)p(Z\\,|\\,Y)p(W\\,|\\,X,Z)$\n",
     "\n",
-    "$p(Z_1)p(X_1\\,|\\,Z_1)\\prod_{i=2}^{5}p(X_i\\,|\\,Z_i,X_{i-1})\\prod_{i=2}^{5}p(Z_i\\,|\\,Z_{i-1})$\n"
+    "$p(Z_1)p(X_1\\,|\\,Z_1)\\prod_{i=2}^{5}p(X_i\\,|\\,Z_i,X_{i-1})\\prod_{i=2}^{5}p(Z_i\\,|\\,Z_{i-1})$\n",
+    "\n"
    ]
   },
   {
@@ -49,11 +76,14 @@
     "\n",
     "1. How much time does it take to compute the joint probability $P({\\bf X}, {\\bf Z} | \\Theta)$ in terms of $N$ and $K$, where ${\\bf X} = {{\\bf x}_1, \\ldots, {\\bf x}_N }$, ${\\bf Z} = {{\\bf z}_1, \\ldots, {\\bf z}_N }$, and $K$ is the number of hidden states in the hidden Markov model $\\Theta$?\n",
     "\n",
-    "2. How many terms are there in the sum on slide 34 for computing $P({\\bf X}|\\Theta)$? Why?\n",
+    "2. How many terms are there in the sum on slide 34 for computing $P({\\bf X}|\\Theta)$? Why?    \n",
+    "   We have $K^N$\n",
     "\n",
-    "3. How many terms are there in the maximization on slide 37 for computing the Viterbi decoding ${\\bf Z}^*$? Why?\n",
+    "3. How many terms are there in the maximization on slide 37 for computing the Viterbi decoding ${\\bf Z}^*$? Why?    \n",
+    "   We have $K^N$\n",
     "\n",
-    "4. How many terms are there in the maximixation on slide 38 for computing ${\\bf z}^*_n$, i.e. the *n*th state in a posterior decoding? Why?"
+    "4. How many terms are there in the maximixation on slide 38 for computing ${\\bf z}^*_n$, i.e. the *n*th state in a posterior decoding? Why?    \n",
+    "   We have $K$"
    ]
   },
   {
@@ -84,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -98,10 +128,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
