TØ 16. november - week 11.

--- a/week10/practical.ipynb
+++ b/week10/practical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 2451,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2452,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2453,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2454,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2455,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2456,
    "metadata": {
     "nbpresent": {
      "id": "9a29e558-111a-47bf-a450-2f7a61613ad4"
@@ -219,7 +219,7 @@
        " 0]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2456,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2457,
    "metadata": {
     "collapsed": true
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2458,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "'gtttcccagtgtatatcgagggatactacgtgcatagtaacatcggccaa'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2458,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2459,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2460,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        " 1]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2460,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2461,
    "metadata": {
     "nbpresent": {
      "id": "43336c35-2a6f-46e9-b86e-0367377dca39"
@@ -400,7 +400,7 @@
        " [0.0, 0.0, 0.0, 0.1, 0.9, 0.0, 0.0]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2461,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2462,
    "metadata": {
     "collapsed": true
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2463,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -493,7 +493,7 @@
    "outputs": [],
    "source": [
     "def validate_hmm(model):\n",
-    "    pass\n"
+    "    pass"
    ]
   },
   {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2464,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 2465,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "0.9999999999999999"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 2465,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2466,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "1.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2466,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2467,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "0.44999999999999996"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2467,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2468,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "0.7000000000000001"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2468,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2469,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "0.44999999999999996"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2469,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2470,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2471,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2472,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2473,
    "metadata": {
     "collapsed": true
    },
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2474,
    "metadata": {
     "collapsed": true
    },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2475,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2476,
    "metadata": {
     "collapsed": true
    },
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2477,
    "metadata": {
     "collapsed": true
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2478,
    "metadata": {
     "collapsed": true
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2479,
    "metadata": {
     "collapsed": true
    },
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2480,
    "metadata": {
     "collapsed": true
    },
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2481,
    "metadata": {
     "collapsed": true
    },
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2482,
    "metadata": {
     "collapsed": true
    },
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2483,
    "metadata": {
     "collapsed": true
    },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2484,
    "metadata": {
     "collapsed": true
    },
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2485,
    "metadata": {
     "collapsed": true
    },
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2486,
    "metadata": {
     "collapsed": true
    },
@@ -1154,11 +1154,30 @@
     "    \n",
     "    w = make_table(k, n)\n",
     "    \n",
+    "    # Translate the sequence to indices\n",
+    "    x = translate_observations_to_indices(x)\n",
+    "\n",
     "    # Base case: fill out w[i][0] for i = 0..k-1\n",
-    "    # ...\n",
-    "    \n",
+    "    for i in range(0, k):\n",
+    "        # if we take log to zero then we replace it with -inf\n",
+    "        if model.init_probs[i] == 0 : w[i][0] = -float('inf')\n",
+    "        elif model.emission_probs[i][x[0]] == 0: w[i][0] = -float('inf')\n",
+    "        else: \n",
+    "            w[i][0] = log(model.init_probs[i]) + log(model.emission_probs[i][x[0]])\n",
+    "\n",
     "    # Inductive case: fill out w[i][j] for i = 0..k, j = 0..n-1\n",
-    "    # ..."
+    "    for j in range(1, n):\n",
+    "        for i in range(0, k):\n",
+    "            # if we take log to zero then we replace it with -inf\n",
+    "            # if model.trans_probs[k][i] == 0: w[i][j] = -math.inf\n",
+    "            if model.emission_probs[i][x[j]] == 0: w[i][j] = -float('inf')\n",
+    "            else: \n",
+    "                tmp = -float('inf')\n",
+    "                for l in range(0, k):\n",
+    "                    if w[l][j-1] + log(model.trans_probs[l][i]) > tmp:\n",
+    "                        tmp = w[l][j-1]+log(model.trans_probs[l][i])\n",
+    "                w[i][j] = tmp + log(model.emission_probs[i][x[j]])\n",
+    "    return w"
    ]
   },
   {
@@ -1170,23 +1189,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2487,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def opt_path_prob_log(w):\n",
-    "    pass"
+    "    return max(w[i][len(w[0])-1] for i in range(0, len(w)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2488,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-70.73228857440488"
+      ]
+     },
+     "execution_count": 2488,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "w = compute_w_log(hmm_7_state, x_short)\n",
     "opt_path_prob_log(w)"
@@ -1201,13 +1231,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2489,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1406.7209253880144"
+      ]
+     },
+     "execution_count": 2489,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here ..."
+    "# Your code here ...\n",
+    "w = compute_w_log(hmm_7_state, x_long)\n",
+    "opt_path_prob_log(w)"
    ]
   },
   {
@@ -1219,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2490,
    "metadata": {
     "collapsed": true
    },
@@ -1231,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2491,
    "metadata": {
     "collapsed": true
    },
@@ -1250,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2492,
    "metadata": {
     "collapsed": true
    },
@@ -1279,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2493,
    "metadata": {
     "collapsed": true
    },
@@ -1321,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2494,
    "metadata": {
     "collapsed": true
    },
@@ -1355,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2495,
    "metadata": {
     "collapsed": true
    },
@@ -1380,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2496,
    "metadata": {
     "collapsed": true
    },
@@ -1407,7 +1450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
