--- a/week11/theory.ipynb
+++ b/week11/theory.ipynb
@@ -20,6 +20,13 @@
     "    These pairs are: (`HHLLLHHHHLLLLHH`, `SSSRRSSSRRRRSSS`) and (`LLHHLLLHHHHLLHH`, `RRRSSRRRSSSRRRS`), where H and L are the two states of the model, and S and R are the two emissions sunshine and rain. \n",
     "    \n",
     "    Use Training-by-Counting to set the model parameters according to this training data.\n",
+    "\n",
+    "    **Solution:**\n",
+    "    Start: Vi starter i H en gang, og vi starter i L en gang, så vi får 50% sandsynlighed for at starte i både H og L. \n",
+    "\n",
+    "    Vi fortsætter med at tælle sandsynligheder fra H -> H, H -> L, L -> L, L -> H. Vi tager derefter (svar / 14), fordi vi skal tage samlet H -> L + H -> H. \n",
+    "\n",
+    "    Note: $Z_1^*$ er sekvens givet ved $\\Theta^i$ og $X_i$. \n",
     " \n",
     "2. Consider Viterbi training as explained on slides 18-19. If a parameter in the initial model ${\\bf \\Theta^0}$ is set to zero, i.e. if a particular transition or emission probability is set to zero, then it will remain zero during all the iterations of Viterbi training (if we do not perform pseudo counts). Why? \n",
     "\n",
